@@ -43,6 +43,7 @@
  * Supported elm_object_item common APIs.
  * @li elm_object_item_del
  * @li elm_object_item_part_text_get
+ * @li elm_object_item_signal_emit - this works only when the item is created.
  *
  * See @ref tutorial_hoversel for an example.
  * @{
